--- a/index.html
+++ b/index.html
@@ -202,6 +202,21 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
+                    <a href="https://iiif.bl.uk/uv/#?manifest=https://bl.digirati.io/manifests/ark:/81055/man_10000006.0x000001" data-manifest="https://bl.digirati.io/manifests/ark:/81055/man_10000006.0x000001" class="showcase-box">
+                        <img src="/img/showcase/BL.jpg" class="img-responsive" alt="">
+                        <div class="showcase-box-caption">
+                            <div class="showcase-box-caption-content">
+                                <div class="project-category text-faded">
+                                    The British Library
+                                </div>
+                                <div class="project-name">
+                                    Lindisfarne Gospels
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-lg-4 col-sm-6">
                     <a href="https://d.lib.ncsu.edu/collections/catalog/nubian-message-1992-11-30" data-manifest="https://d.lib.ncsu.edu/collections/catalog/nubian-message-1992-11-30/manifest" class="showcase-box">
                         <img src="/img/showcase/ncsu.jpg" class="img-responsive" alt="">
                         <div class="showcase-box-caption">
@@ -216,7 +231,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="col-lg-4 col-sm-6 col-lg-offset-2">
+                <div class="col-lg-4 col-sm-6">
                     <a href="http://iiif.bodleian.ox.ac.uk/iiif/viewer/60834383-7146-41ab-bfe1-48ee97bc04be" data-manifest="http://iiif.bodleian.ox.ac.uk/iiif/manifest/60834383-7146-41ab-bfe1-48ee97bc04be.json" class="showcase-box">
                         <img src="/img/showcase/bodleian.jpg" class="img-responsive" alt="">
                         <div class="showcase-box-caption">
@@ -231,7 +246,7 @@
                         </div>
                     </a>
                 </div>
-                <div class="col-lg-4 col-sm-6 col-sm-offset-3 col-lg-offset-0">
+                <div class="col-lg-4 col-sm-6">
                     <a href="https://sok.riksarkivet.se/bildvisning/R0000004_00001?viewer=UV" data-manifest="https://iiif.riksarkivet.se/arkis!R0000004/manifest" class="showcase-box">
                         <img src="/img/showcase/riksarkivet.jpg" class="img-responsive" alt="">
                         <div class="showcase-box-caption">
@@ -354,14 +369,5 @@
 </body>
 
 </html>
-
-
-
-
-
-
-
-
-
 
 
