--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                 </div>
                 <div class="col-lg-4 col-sm-6">
                     <a href="https://iiif.bl.uk/uv/#?manifest=https://bl.digirati.io/manifests/ark:/81055/man_10000006.0x000001" data-manifest="https://bl.digirati.io/manifests/ark:/81055/man_10000006.0x000001" class="showcase-box">
-                        <img src="/img/showcase/BL.jpg" class="img-responsive" alt="">
+                        <img src="/img/showcase/bl.jpg" class="img-responsive" alt="">
                         <div class="showcase-box-caption">
                             <div class="showcase-box-caption-content">
                                 <div class="project-category text-faded">
@@ -369,5 +369,6 @@
 </body>
 
 </html>
+
 
 
