--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <!-- Custom Fonts -->
     <link href="/vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-    <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
 
     <!-- Plugin CSS -->
@@ -295,10 +295,19 @@
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h2 class="section-heading">Get In Touch</h2>
                     <hr class="primary">
-                    <p>
-                        <a href="https://docs.google.com/forms/d/e/1FAIpQLSeHLD0kng5aXvGFsNN_tJGsZMTnp08Hv2F6kdGsJRb6bT0NWw/viewform">Join the UV Slack</a>
-                        <span class="explanatory">This is where most of the conversation happens</span>
-                    </p>
+                    <h4>
+                        Join the UV Slack
+                    </h4>
+                    <span class="explanatory" style="margin-top:10px;margin-bottom:20px;">
+                        Send an email to
+                        <a href="mailto:universalviewerapp@gmail.com?subject=Slack Invite Request"
+                            style="display:inline-block;padding:0 4px;">
+                            <strong>
+                                universalviewerapp@gmail.com
+                            </strong>
+                        </a>
+                        to request an invite.
+                    </span>
                     <!-- <p>
                         <a href="https://groups.google.com/forum/#!forum/universalviewer">Join the UV Google Group</a>
                         <span class="explanatory">A good place to ask questions if you are just trying out the UV</span>
