--- a/public/uv.html
+++ b/public/uv.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>UV</title>
-    <meta http-equiv="refresh" content="0; url=https://universalviewer.dev/">
+    <meta http-equiv="refresh" content="0; url=https://universalviewer.dev/uv.html">
 </head>
 
 <body>
